# spacesim2

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run_commodities_test.py  run_headless.py  run_ui.py  tasks.md  test_skills.py
.claude/agents/: simulation-analyst.md
data/: commodities.yaml  processes.yaml  skills.yaml
dev-tools/: market_maker_validation.py  run_analysis_batch.py  test_notebook.sh  validate_run_data.py
docs/: actor_grid_ui.md  commodities_implementation.md  dev-guide-notebooks.md  dev-guide-ships.md  dev-guide-simulation.md  needs.md  sim-design.md  skills.md
notebooks/: README.md  analysis_template.py  clothing_drive_analysis.py  comprehensive_analysis.py  planet_specialization_analysis.py  planetary_trade.py  shelter_supply_chain_diagnosis.py  shelter_validation.py  ship_analysis.py  ship_economics.py  ship_food_trade_analysis.py  ship_trading_diagnosis.py  test_ship_economics.py
scripts/: analyze_trader.py  check_graph.py  ship_price_analysis.py  ship_trading_summary.py
spacesim2/: __init__.py  __main__.py
spacesim2/analysis/: __init__.py
spacesim2/analysis/export/: __init__.py  exporter.py  schema.py  streaming_writer.py
spacesim2/analysis/loading/: __init__.py  loader.py  utils.py
spacesim2/cli/: __init__.py  common.py  main.py  output.py
spacesim2/cli/commands/: analyze.py  run.py  ui.py
spacesim2/core/: __init__.py  actor.py  actor_brain.py  commands.py  commodity.py  data_logger.py  market.py  planet.py  planet_attributes.py  process.py  ship.py  simulation.py  skill.py
spacesim2/core/brains/: __init__.py  colonist.py  industrialist.py  market_maker_1.py  market_maker_2.py
spacesim2/core/drives/: __init__.py  actor_drive.py  clothing_drive.py  food_drive.py  shelter_drive.py
spacesim2/ui/: headless.py  pygame_ui.py
spacesim2/ui/components/: actor_list.py  detail_panel.py  planet_view.py  ship_list.py  status_bar.py
tests/: conftest.py  helpers.py  test_actor.py  test_actor_drive.py  test_commodities.py  test_commodity.py  test_fictional_planets.py  test_food_drive.py  test_industrialist_brain.py  test_industrialist_integration.py  test_market.py  test_market_conservation.py  test_persistent_orders.py  test_planet_attributes.py  test_run_discovery.py  test_shelter_drive.py  test_ship.py  test_simulation.py
(+11 files in other folders)
